<resources>
    <string name="app_name">Stonks</string>
    <string name="home">Home</string>
    <string name="wallet">Wallet</string>
    <string name="discover">Discover</string>
    <string name="settings">Settings</string>
    <string name="buy">Buy</string>
    <string name="convert">Convert</string>
    <string name="send">Send</string>
    <string name="eth_default">ETH 0.00</string>
    <string name="sgd_default">SGD 0.00</string>
    <string name="stk_default">STK 0.00</string>
    <string name="btc_default">BTC 0.00</string>
    <string name="all">All</string>
    <string name="news">News</string>
    <string name="jobs">Jobs</string>
    <string name="dashboard">Dashboard</string>
    <string name="manage">Manage</string>
    <string name="sgd">SGD</string>
    <string name="zero">0.00</string>
    <string name="eth">ETH</string>
    <string name="transfer">Transfer</string>
    <string name="history">History</string>
    <string name="stats">Stats</string>
</resources>