<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="@drawable/bg">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="220dp"
        android:layout_marginBottom="20dp">
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dashboard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:text="@string/dashboard"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:fontFamily="@font/circular_std_bold" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@drawable/blue"
            android:padding="30dp"
            android:layout_below="@+id/dashboard">
            <TextView
                android:id="@+id/home_stk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="15dp"
                android:textSize="35sp"
                android:text="@string/stk_default"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/circular_std_bold"/>
            <TextView
                android:id="@+id/home_eth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/home_stk"
                android:layout_alignParentLeft="true"
                android:textSize="15sp"
                android:text="@string/eth_default"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/circular_std_bold"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:text="@string/manage"
                android:background="@drawable/manage_button"
                android:fontFamily="@font/circular_std_bold"
                android:textColor="@color/blue"/>
        </RelativeLayout>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/avatar"
            android:gravity="center"
            android:padding="15dp"
            android:layout_toRightOf="@+id/dashboard"
            android:layout_marginTop="20dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/user"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="3dp"
        android:textSize="20dp"
        android:text="ETH Price"
        android:fontFamily="@font/circular_std_bold"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:text="SGD 0.00"
        android:fontFamily="@font/circular_std_bold"
        android:textColor="@color/white"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:text="+3.29% over the last week"
        android:fontFamily="@font/circular_std_bold"
        android:textColor="@color/white"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/my_wallet_creds"
        android:orientation="vertical"
        android:padding="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="How much ETH do you want to buy?"
            android:fontFamily="@font/circular_std_bold"
            android:textColor="@color/dark_blue"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="12dp"
            android:background="@drawable/form">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@color/transparent"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:fontFamily="@font/circular_std_bold"
                android:textSize="20sp"
                android:hint="@string/zero" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/circular_std_bold"
                android:textSize="20sp"
                android:text="@string/sgd"/>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/yeet">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@color/transparent"
                android:textColor="@color/dark_blue"
                android:textColorHint="@color/dark_blue"
                android:fontFamily="@font/circular_std_bold"
                android:textSize="20sp"
                android:hint="@string/zero" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/circular_std_bold"
                android:textSize="20sp"
                android:text="@string/eth"/>
        </RelativeLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:textColor="@color/colorPrimary"
            android:fontFamily="@font/circular_std_bold"
            android:textSize="20sp"
            android:text="Buy!"/>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>