<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingHorizontal="25dp"
        android:paddingVertical="15dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:background="@drawable/blue">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/buy"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/blue_button"
                android:layout_marginBottom="5dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/buy"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="60dp">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/convert"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/convert"
                android:layout_marginBottom="5dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/convert"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginStart="60dp">
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/send"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/send"
                android:layout_marginBottom="5dp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:text="@string/send"
                android:textStyle="bold"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingVertical="15dp"
        android:layout_marginBottom="30dp"
        android:gravity="start"
        android:orientation="horizontal"
        android:background="@drawable/my_wallet_creds"
        tools:ignore="RtlSymmetry">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/ether"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/eth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:text="@string/eth_default"
                android:textStyle="bold"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/eth_sgd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:text="@string/sgd_default"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingVertical="15dp"
        android:layout_marginBottom="30dp"
        android:gravity="start"
        android:orientation="horizontal"
        android:background="@drawable/my_wallet_creds"
        tools:ignore="RtlSymmetry">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:background="@drawable/stk"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:text="@string/stk_default"
                android:textStyle="bold"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/stk_sgd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:text="@string/sgd_default"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingVertical="15dp"
        android:layout_marginBottom="30dp"
        android:gravity="start"
        android:orientation="horizontal"
        android:background="@drawable/my_wallet_creds"
        tools:ignore="RtlSymmetry">
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/bitcoin"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="15dp">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:text="@string/btc_default"
                android:textStyle="bold"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/btc_sgd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"
                android:text="@string/sgd_default"
                android:textStyle="bold"/>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </LinearLayout>
</androidx.appcompat.widget.LinearLayoutCompat>