<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout android:id="@+id/wallet_drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="90dp"
    android:background="@drawable/navigation_drawer"
    android:foregroundGravity="bottom"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingHorizontal="20dp"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="50dp">
            <ImageButton
                android:id="@+id/menu_transfer"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="5dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center"
                android:background="@drawable/my_wallet_creds"
                android:src="@drawable/transfer"
                android:scaleType="centerCrop" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/circular_std_bold"
                android:text="@string/transfer"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:orientation="vertical">
            <ImageButton
                android:id="@+id/menu_history"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="5dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center"
                android:background="@drawable/my_wallet_creds"
                android:src="@drawable/history"
                android:scaleType="centerCrop" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/circular_std_bold"
                android:text="@string/history"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="30dp">
            <ImageButton
                android:id="@+id/menu_stats"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:padding="5dp"
                android:layout_marginBottom="2dp"
                android:layout_gravity="center"
                android:background="@drawable/my_wallet_creds"
                android:src="@drawable/stats"
                android:scaleType="centerCrop" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/circular_std_bold"
                android:text="@string/stats"/>
        </LinearLayout>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.drawerlayout.widget.DrawerLayout>